Fixed SonarQube & IntelliJ Analyze Issues, Spring Boot, Gradle & Java Update